fix #10 updated alignment for footer on mobile

--- a/client/sass/_footer.scss
+++ b/client/sass/_footer.scss
@@ -15,6 +15,7 @@
 
 	&__logo {
 		display: inline-block;
+		margin-left: 1em;
 		margin-right: 2em;
 	}
 
@@ -35,9 +36,21 @@
 	}
 
 	&__legal {
-		font-size: .9em;
-		line-height: 1.2;
+		font-size: .95em;
+		line-height: 1;
 		margin-bottom: .25em;
+	}
+
+	@include media-breakpoint-down(sm) {
+		&__title {
+			margin-bottom: .25em;
+			margin-top: 1em;
+		}
+
+		&__legal {
+			font-size: .75em;
+			line-height: 1.2;
+		}
 	}
 
 	&__social-media-icon {
